fix typo in the example Jupyter notebook

--- a/tools/visualize.ipynb
+++ b/tools/visualize.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "# Get field data into a numpy array\n",
-    "Ez = ad['Ez'].reshape(ds.domain_dimensions).squeeze()"
+    "Ez = ad['Ez'].v.reshape(ds.domain_dimensions).squeeze()"
    ]
   },
   {
