--- a/doc/equations_hipace.tex
+++ b/doc/equations_hipace.tex
@@ -165,4 +165,29 @@ E_z
                 {2\left(1+\blue{\frac{e}{m_ec^2}}\psi_p\right)}
 \end{equation}
 
+\pagebreak
+
+\subsection*{Algorithm}
+
+Subscript $p$ means plasma, subscript $b$ means beam. Brackets in superscript $(n+2)$ mean "predicted". $\rho$ and capital letters are field data, others are particle data. $x$, $u$ and $\psi$ are the position, momentum and pseudo-potential respectively.
+
+\begin{subequations}
+\begin{align}
+f_x^n, f_u^n, f_{\psi}^n &\rightarrow x_p^{n+1}, u_p^{n+1}, \psi_p^{n+1}, x_{prev}=x_p^{n+1} \\
+x_p^{n+1}, u_p^{n+1} &\rightarrow \rho_p^{n+1}, J_{p,\perp}^{n+1}, J_{p,z}^{n+1} \\
+\rho_p^{n+1}, J_{p,z}^{n+1} &\rightarrow \Psi_p^{n+1} \rightarrow (E_x-cB_y)^{n+1}, (E_y+cB_x)^{n+1}\\
+x_b^{n+1}, u_b^{n+1} &\rightarrow J_{\perp}^{n+1}, J_z^{n+1} \\
+J_{\perp}^{n+1} &\rightarrow E_z^{n+1}, B_z^{n+1} \\
+B_{\perp}^{n-1}, B_{\perp}^{n} &\rightarrow B_{\perp}^{(n+1)}, B_{\perp}^{prev}=B_{\perp}^{(n+1)} \\
+E^{n+1}, B_z^{n+1}, B_{\perp}^{(n+1) }&\rightarrow f_x^{(n+1)}, f_u^{(n+1)}, f_{\psi}^{(n+1)}
+\end{align}
+\text{And then, while $error(B_{\perp, iter}^{(n+1)}, B_{\perp}^{(n+1)})$:}
+\begin{align}
+x_p^{n+1}, u_p^{n+1}, \psi_p^{n+1}, f_x^{(n+1)}, f_u^{(n+1)}, f_{\psi}^{(n+1)} &\rightarrow x_p^{(n+2)}, u_p^{(n+2)}, \psi_p^{(n+2)} \\
+x_p^{(n+2)}, u_p^{(n+2)}, \psi_p^{(n+2)} &\rightarrow J_{\perp}^{(n+2)} \\
+J_z^{n+1}, J_{\perp}^{n}, J_{\perp}^{(n+2)} &\rightarrow B_{\perp, iter}^{(n+1)}\\
+B_{\perp}^{n}, B_{\perp, iter}^{(n+1)}, B_{\perp}^{prev} &\rightarrow B_{\perp}^{(n+1)}, B_{\perp}^{prev}=B_{\perp, iter}^{(n+1)} \\
+B_{\perp}^{(n+1)}, E_{\perp}^{n+1} &\rightarrow f_x^{(n+1)}, f_u^{(n+1)}, f_{\psi}^{(n+1)}
+\end{align}
+\end{subequations}
 \end{document}
