--- a/doc/equations_hipace.tex
+++ b/doc/equations_hipace.tex
@@ -1,4 +1,5 @@
 \documentclass{article}
+\usepackage[a4paper, total={6in, 8in}]{geometry}
 \usepackage[utf8]{inputenc}
 
 \title{Contemporary field equations in HiPACE}
@@ -173,21 +174,21 @@ Subscript $p$ means plasma, subscript $b$ means beam. Brackets in superscript $(
 
 \begin{subequations}
 \begin{align}
-f_x^n, f_u^n, f_{\psi}^n &\rightarrow x_p^{n+1}, u_p^{n+1}, \psi_p^{n+1}, x_{prev}=x_p^{n+1} \\
-x_p^{n+1}, u_p^{n+1} &\rightarrow \rho_p^{n+1}, J_{p,\perp}^{n+1}, J_{p,z}^{n+1} \\
-\rho_p^{n+1}, J_{p,z}^{n+1} &\rightarrow \Psi_p^{n+1} \rightarrow (E_x-cB_y)^{n+1}, (E_y+cB_x)^{n+1}\\
-x_b^{n+1}, u_b^{n+1} &\rightarrow J_{\perp}^{n+1}, J_z^{n+1} \\
-J_{\perp}^{n+1} &\rightarrow E_z^{n+1}, B_z^{n+1} \\
-B_{\perp}^{n-1}, B_{\perp}^{n} &\rightarrow B_{\perp}^{(n+1)}, B_{\perp}^{prev}=B_{\perp}^{(n+1)} \\
-E^{n+1}, B_z^{n+1}, B_{\perp}^{(n+1) }&\rightarrow f_x^{(n+1)}, f_u^{(n+1)}, f_{\psi}^{(n+1)}
+\text{plasma push: } f_x^n, f_u^n, f_{\psi}^n &\longrightarrow x_p^{n+1}, u_p^{n+1}, \psi_p^{n+1}, x_{prev}=x_p^{n+1} \\
+\text{plasma deposition: } x_p^{n+1}, u_p^{n+1} &\longrightarrow \rho_p^{n+1}, J_{p,\perp}^{n+1}, J_{p,z}^{n+1} \\
+\text{Poisson solve: } \rho_p^{n+1}, J_{p,z}^{n+1} &\longrightarrow \Psi_p^{n+1} \longrightarrow (E_x-cB_y)^{n+1}, (E_y+cB_x)^{n+1}\\
+\text{beam deposition: } x_b^{n+1}, u_b^{n+1} &\longrightarrow J_{\perp}^{n+1}, J_z^{n+1} \\
+\text{Poisson solve: } J_{\perp}^{n+1} &\longrightarrow E_z^{n+1}, B_z^{n+1} \\
+\text{Init Pred-Corr guess: } B_{\perp}^{n-1}, B_{\perp}^{n} &\longrightarrow B_{\perp}^{(n+1)}, B_{\perp}^{prev}=B_{\perp}^{(n+1)} \\
+\text{plasma forces: } E^{n+1}, B_z^{n+1}, B_{\perp}^{(n+1) }&\longrightarrow f_x^{(n+1)}, f_u^{(n+1)}, f_{\psi}^{(n+1)}
 \end{align}
-\text{And then, while error$(B_{\perp, iter}^{(n+1)}, B_{\perp}^{(n+1)}) >$ tolerance:}
+\text{Predictor-corrector loop, while error$(B_{\perp, iter}^{(n+1)}, B_{\perp}^{(n+1)}) >$ tolerance:}
 \begin{align}
-x_p^{n+1}, u_p^{n+1}, \psi_p^{n+1}, f_x^{(n+1)}, f_u^{(n+1)}, f_{\psi}^{(n+1)} &\rightarrow x_p^{(n+2)}, u_p^{(n+2)}, \psi_p^{(n+2)} \\
-x_p^{(n+2)}, u_p^{(n+2)}, \psi_p^{(n+2)} &\rightarrow J_{\perp}^{(n+2)} \\
-J_z^{n+1}, J_{\perp}^{n}, J_{\perp}^{(n+2)} &\rightarrow B_{\perp, iter}^{(n+1)}\\
-B_{\perp}^{n}, B_{\perp, iter}^{(n+1)}, B_{\perp}^{prev} &\rightarrow B_{\perp}^{(n+1)}, B_{\perp}^{prev}=B_{\perp, iter}^{(n+1)} \\
-B_{\perp}^{(n+1)}, E_{\perp}^{n+1} &\rightarrow f_x^{(n+1)}, f_u^{(n+1)}, f_{\psi}^{(n+1)}
+\text{plasma push: } x_p^{n+1}, u_p^{n+1}, \psi_p^{n+1}, f_x^{(n+1)}, f_u^{(n+1)}, f_{\psi}^{(n+1)} &\longrightarrow x_p^{(n+2)}, u_p^{(n+2)}, \psi_p^{(n+2)} \\
+\text{plasma deposition: }x_p^{(n+2)}, u_p^{(n+2)}, \psi_p^{(n+2)} &\longrightarrow J_{\perp}^{(n+2)} \\
+\text{Poisson solve: }J_z^{n+1}, J_{\perp}^{n}, J_{\perp}^{(n+2)} &\longrightarrow B_{\perp, iter}^{(n+1)}\\
+\text{New guess: }B_{\perp}^{n}, B_{\perp, iter}^{(n+1)}, B_{\perp}^{prev} &\longrightarrow B_{\perp}^{(n+1)}, B_{\perp}^{prev}=B_{\perp, iter}^{(n+1)} \\
+\text{plasma forces: }B_{\perp}^{(n+1)}, E_{\perp}^{n+1} &\longrightarrow f_x^{(n+1)}, f_u^{(n+1)}, f_{\psi}^{(n+1)}
 \end{align}
 \end{subequations}
 \end{document}
