--- a/doc/equations_hipace.tex
+++ b/doc/equations_hipace.tex
@@ -195,7 +195,8 @@ Subscript $p$ means plasma, subscript $b$ means beam. Brackets in superscript $(
 
 \subsection*{WAND-PIC method}
 
-The WAND-PIC paper https://arxiv.org/abs/2012.00881 proposes a new approach to get rid of all steps of the predictor-correct loop above, and derives an equation (albeit a bit more complicated than a Poisson equation) for $B_x$ and $B_y$. This is equation (19) of their paper:
+
+The WAND-PIC paper (open-source implementation available, see below) proposes a new approach to get rid of all steps of the predictor-correct loop above, and derives an equation (albeit a bit more complicated than a Poisson equation) for $B_x$ and $B_y$. This is equation (19) of their paper:
 
 \begin{subequations}
 \begin{align}
@@ -207,5 +208,12 @@ n_*\langle \gamma\rangle &= \frac{1+\psi}{2}\left(n_*\langle v_x^2\rangle + n_*\
 \end{subequations}
 
 where $n_* = n_e - j_z$ where $n_e$ is the plasma electron density and $jz$ is the longitudinal current density. All densities are only plasma densities (charge and current), except when $total$ is specified in subscript, in that case it is the full density (plasma + beam). $n_*\langle \bm{v_\perp}\rangle$ is the plasma transverse current density, already computed (or close to) in Hipace++ ($J_x$ and $J_y$). $n_*\langle v_x\bm{v_\perp}\rangle$ etc. are new quantities that would have to be deposited ($J_{xx}$, $J_{yy}$ and $J_{xy}$).
+
+The main equation to solve is the first one. It is an inhomogeneous Helmholtz equation with non-constant coefficients, unfortunately I can't see any way to solve it with FFT, so the plan is to use it using AMReX' Multigrid solver.
+
+\begin{itemize}
+\item WAND-PIC paper: https://arxiv.org/abs/2012.00881
+\item WAND-PIC repo: https://github.com/tianhongg/WAND-PIC
+\end{itemize}
 
 \end{document}
