Add a paragraph on wandpic in the tex file (#354)
* add a paragraph on wandpic in the tex

* update text

* table wandpic-hipace notations

--- a/doc/equations_hipace.tex
+++ b/doc/equations_hipace.tex
@@ -8,6 +8,7 @@
 \usepackage{natbib}
 \usepackage{graphicx}
 \usepackage{amsmath}
+\usepackage{bm}
 \begin{document}
 
 
@@ -170,7 +171,7 @@ E_z
 
 \subsection*{Algorithm}
 
-Subscript $p$ means plasma, subscript $b$ means beam. Brackets in superscript $(n+2)$ mean "predicted". $\rho$ and capital letters are field data, others are particle data. $x$, $u$ and $\psi$ are the position, momentum and pseudo-potential respectively. $f$ stands for the force terms.
+Subscript $p$ means plasma, subscript $b$ means beam. Brackets in superscript $(n==+2)$ mean "predicted". $\rho$ and capital letters are field data, others are particle data. $x$, $u$ and $\psi$ are the position, momentum and pseudo-potential respectively. $f$ stands for the force terms.
 
 \begin{subequations}
 \begin{align}
@@ -191,4 +192,39 @@ Subscript $p$ means plasma, subscript $b$ means beam. Brackets in superscript $(
 \text{update plasma forces: }B_{\perp}^{(n+1)}, E_{\perp}^{n+1} &\longrightarrow f_x^{(n+1)}, f_u^{(n+1)}, f_{\psi}^{(n+1)}
 \end{align}
 \end{subequations}
+
+\subsection*{WAND-PIC method}
+
+
+The WAND-PIC paper (open-source implementation available, see below) proposes a new approach to get rid of all steps of the predictor-correct loop above, and derives an equation (albeit a bit more complicated than a Poisson equation) for $B_x$ and $B_y$. This is equation (19) of their paper:
+
+\begin{subequations}
+\begin{align}
+\Delta_\perp \bm{B_\perp} &= \frac{n_*}{1+\psi} \bm{B_\perp} - \bm{e_z} \times \bm{S} \\
+\bm{S}_\perp &= \frac{1}{1+\psi} B_z \left( \bm{e_z} \times n_* \langle\bm{v_\perp}\rangle \right) + n_* \langle \bm{\tilde{a}} \rangle - \partial_x\left( n_*\langle v_x\bm{v_\perp} \rangle \right) - \partial_y\left( n_*\langle v_y\bm{v_\perp} \rangle \right) + \bm{\nabla_\perp}j_z^{total} \\
+n_* \langle \bm{\tilde{a}} \rangle &= \frac{1}{1+\psi} \left(  \frac{n_*\langle\gamma\rangle}{1+\psi}\bm{\nabla_\perp}\psi - n_* \langle \bm{v_\perp} \rangle E_z - n_* \langle v_x\bm{v_\perp}\rangle \partial_x\psi - n_* \langle v_y\bm{v_\perp}\rangle \partial_y\psi \right) \\
+n_*\langle \gamma\rangle &= \frac{1+\psi}{2}\left(n_*\langle v_x^2\rangle + n_*\langle v_y^2\rangle + n_*\right) + \frac{n_*}{2(1+\psi)}
+\end{align}
+\end{subequations}
+
+where $n_* = n_e - j_z$ where $n_e$ is the plasma electron density and $jz$ is the longitudinal current density. All densities are only plasma densities (charge and current), except when $total$ is specified in subscript, in that case it is the full density (plasma + beam). The notations used here are from the WAND-PIC paper.
+
+The correspondance between quantities Hipace++ and WAND-PIC is:
+\begin{subequations}
+\begin{align}
+\text{WAND-PIC} &\leftrightarrow \text{Hipace++} \\
+n_* &\leftrightarrow \rho - j_z \text{ (+ ions)} \\
+n_e &\leftrightarrow \rho \text{ (+ ions)}  \\
+n_*\langle \bm{v_\perp}\rangle &\leftrightarrow \bm{J_\perp} (J_x \text{ and } J_y) \\
+n_*\langle v_x \bm{v_\perp}\rangle \text{ and } n_*\langle v_y \bm{v_\perp}\rangle &\leftrightarrow \text{does not exist } (J_{xx}, J_{yy}, J_{xy})
+\end{align}
+\end{subequations}
+
+The main equation to solve is the first one. It is an inhomogeneous Helmholtz equation with non-constant coefficients, unfortunately I can't see any way to solve it with FFT, so the plan is to use AMReX' Multigrid solver.
+
+\begin{itemize}
+\item WAND-PIC paper: https://arxiv.org/abs/2012.00881
+\item WAND-PIC repo: https://github.com/tianhongg/WAND-PIC
+\end{itemize}
+
 \end{document}
