--- a/doc/equations_hipace.tex
+++ b/doc/equations_hipace.tex
@@ -207,16 +207,32 @@ n_*\langle \gamma\rangle &= \frac{1+\psi}{2}\left(n_*\langle v_x^2\rangle + n_*\
 \end{align}
 \end{subequations}
 
-where $n_* = n_e - j_z$ where $n_e$ is the plasma electron density and $jz$ is the longitudinal current density. All densities are only plasma densities (charge and current), except when $total$ is specified in subscript, in that case it is the full density (plasma + beam). The notations used here are from the WAND-PIC paper.
+where $n_* = n_e - j_z$ where $n_e$ is the plasma electron density and $jz$ is the longitudinal current density. All densities are only plasma densities (charge and current), except when $total$ is specified in subscript, in that case it is the full density (plasma + beam). The following sets of equations are for the independent calculation of $B_x$ and $B_y$
 
-The correspondance between quantities Hipace++ and WAND-PIC is:
+\begin{subequations}
+    \begin{align}
+    \Delta B_x &= \frac{n_*}{1+\psi} B_x + S_y \\
+    S_y &= \frac{1}{1+\psi} B_z \left(n_* \langle v_x\rangle \right) + n_* \langle \tilde{a}_y \rangle - \partial_x\left( n_*\langle v_x v_y \rangle \right) - \partial_y\left( n_*\langle v_y^2 \rangle \right) + \partial_y j_z^{total} \\
+    n_* \langle \tilde{a}_y \rangle &= \frac{1}{1+\psi} \left( \red{-} \frac{n_*\langle\gamma\rangle}{1+\psi}\partial_y\psi - n_* \langle v_y \rangle E_z \red{+} n_* \langle v_x v_y\rangle \partial_x\psi \red{+} n_* \langle v_y^2 \rangle \partial_y\psi \right) \\
+    \end{align}
+\end{subequations}
+
+\begin{subequations}
+    \begin{align}
+    \Delta B_y &= \frac{n_*}{1+\psi} B_y - S_x \\
+    S_x &= \frac{1}{1+\psi} B_z \left(-n_* \langle v_y\rangle \right) + n_* \langle \tilde{a}_x \rangle - \partial_x\left( n_*\langle v_x^2 \rangle \right) - \partial_y\left( n_*\langle v_x v_y \rangle \right) + \partial_x j_z^{total} \\
+    n_* \langle \tilde{a}_x \rangle &= \frac{1}{1+\psi} \left( \red{-}\frac{n_*\langle\gamma\rangle}{1+\psi}\partial_x\psi - n_* \langle v_x \rangle E_z \red{+} n_* \langle v_x^2\rangle \partial_x\psi \red{+} n_* \langle v_x v_y \rangle \partial_y\psi \right) \\
+    \end{align}
+\end{subequations}
+
+Signs in red differ from the WAND-PIC paper, but seem to be correct. The notations used here are from the WAND-PIC paper, the correspondance between quantities Hipace++ and WAND-PIC is (superscript H means hipace++):
 \begin{subequations}
 \begin{align}
 \text{WAND-PIC} &\leftrightarrow \text{Hipace++} \\
-n_* &\leftrightarrow \rho - j_z \text{ (+ ions)} \\
-n_e &\leftrightarrow \rho \text{ (+ ions)}  \\
-n_*\langle \bm{v_\perp}\rangle &\leftrightarrow \bm{J_\perp} (J_x \text{ and } J_y) \\
-n_*\langle v_x \bm{v_\perp}\rangle \text{ and } n_*\langle v_y \bm{v_\perp}\rangle &\leftrightarrow \text{does not exist } (J_{xx}, J_{yy}, J_{xy})
+n_e &\leftrightarrow -(\rho^H-\rho_{ions}^H) \\
+n_*\langle \bm{v_\alpha}\rangle &\leftrightarrow -\bm{j_\alpha^H} (\alpha = x \text{ or } y) \\
+n_*\langle \bm{v_\alpha v_\beta}\rangle &\leftrightarrow -\bm{j_{\alpha\beta}^H} (\alpha, \beta = x \text{ or } y) \\
+\bm{j_z} &\leftrightarrow \bm{j_z^H}
 \end{align}
 \end{subequations}
 
