--- a/doc/equations_hipace.tex
+++ b/doc/equations_hipace.tex
@@ -2,7 +2,7 @@
 \usepackage[a4paper, total={6in, 8in}]{geometry}
 \usepackage[utf8]{inputenc}
 
-\title{Contemporary field equations in HiPACE}
+\title{Contemporary field equations in Hipace}
 
 \usepackage{xcolor}
 \usepackage{natbib}
@@ -12,7 +12,7 @@
 \begin{document}
 
 
-\section*{Contemporary field solving routine in HiPACE}
+\section*{Contemporary field solving routine in Hipace}
 \label{se:pic_rad_field_solver}
 
 \newcommand{\blue}[1]{\textcolor{blue}{#1}}
