--- a/docs/equations_hipace.tex
+++ b/docs/equations_hipace.tex
@@ -2,7 +2,7 @@
 \usepackage[a4paper, total={6in, 8in}]{geometry}
 \usepackage[utf8]{inputenc}
 
-\title{Contemporary field equations in Hipace++}
+\title{Contemporary field equations in HiPACE++}
 
 \usepackage{xcolor}
 \usepackage{natbib}
@@ -12,7 +12,7 @@
 \begin{document}
 
 
-\section*{Contemporary field solving routine in Hipace++}
+\section*{Contemporary field solving routine in HiPACE++}
 \label{se:pic_rad_field_solver}
 
 \newcommand{\blue}[1]{\textcolor{blue}{#1}}
@@ -82,7 +82,7 @@ In general, the charge deposition is the operation
 \end{equation}
 where $q$ is the charge of 1 physical particle of the species, $N$ is the number of physical particles in current macro-particle, $S(x)$ is the value of the shape factor at the grid point $ijk$ and $\Delta V$ is the volume of 1 cell.
 
-In Hipace++, this is interpreted as
+In HiPACE++, this is interpreted as
 \begin{equation}
 \begin{split}
 \rho_{ijk} &+= \frac{q N S(x_{ijk})}{\Delta V_{cell}} \\
@@ -225,10 +225,10 @@ where $n_* = n_e - j_z$ where $n_e$ is the plasma electron density and $jz$ is t
     \end{align}
 \end{subequations}
 
-Signs in red differ from the WAND-PIC paper, but seem to be correct. The notations used here are from the WAND-PIC paper, the correspondance between quantities Hipace++ and WAND-PIC is (superscript H means hipace++):
+Signs in red differ from the WAND-PIC paper, but seem to be correct. The notations used here are from the WAND-PIC paper, the correspondance between quantities HiPACE++ and WAND-PIC is (superscript H means HiPACE++):
 \begin{subequations}
 \begin{align}
-\text{WAND-PIC} &\leftrightarrow \text{Hipace++} \\
+\text{WAND-PIC} &\leftrightarrow \text{HiPACE++} \\
 n_e &\leftrightarrow -(\rho^H-\rho_{ions}^H) \\
 n_*\langle \bm{v_\alpha}\rangle &\leftrightarrow -\bm{j_\alpha^H} (\alpha = x \text{ or } y) \\
 n_*\langle \bm{v_\alpha v_\beta}\rangle &\leftrightarrow -\bm{j_{\alpha\beta}^H} (\alpha, \beta = x \text{ or } y) \\
